# cpp_serve

./: .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt  tests.py
build_trt/: _build.sh  save_trt.py  start.sh
config/: config.env
infer/: Dockerfile  errors.py  infer.py  server.py
infer_cpp/: Dockerfile
infer_cpp/src/: CMakeLists.txt  build.sh  entrypoint.sh  infer.cc  infer.h  main.cc  test.sh  test_gpu.sh
infer_cpp/src/models/: resnet.py
infer_cpp/src/utils/: opencvutils.cc  torchutils.cc  torchutils.h
infer_cpp/src/web/: build.sh  crow_all.h  main.cc  start.sh  test_api.py
infer_cpp/src_py/: resnet.py
infer_cpp_crow/: Dockerfile
infer_cpp_crow/src/: infer.cc  main.cc  test_cpu.sh
infer_cpp_crow/src/models/: resnet.py
infer_cpp_crow/src/utils/: opencvutils.cc  opencvutils.h  torchutils.cc
infer_cpp_crow/src/web/: main.cc  start_gpu.sh  test_api.py
infer_cpp_httplib/: Dockerfile
infer_cpp_httplib/src/: entrypoint.sh  infer.cc  infer.h  main.cc
infer_cpp_httplib/src/models/: resnet.py
infer_cpp_httplib/src/utils/: torchutils.cc
infer_cpp_httplib/src/web/: CMakeLists.txt  main.cc  start.sh  start_cpu.sh  test_api.py
nginx/: default.conf
webserver/: Dockerfile  server.py
